--- a/mycareer/src/main/res/layout/activity_landing_page.xml
+++ b/mycareer/src/main/res/layout/activity_landing_page.xml
@@ -1,38 +1,46 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="${packageName}.${activityClass}"
-    android:background="#252530" >
-
-
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="350dp"
-        android:layout_height="200dp"
-        android:src="@drawable/logo"
-        android:layout_marginTop="75dp"
-        android:layout_marginLeft="30dp"
-        />
-
-    <TextView
-        android:id="@+id/tv_logo_subtitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_logo"
-        android:text="@string/logo_subtitle"
-        android:layout_marginTop="-40dp"
-        android:textColor="#FFFFFF"
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"/>
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:background="#252530"
+    android:padding="20dp"
+    tools:context="${packageName}.${activityClass}" >
 
     <com.facebook.widget.LoginButton
-        android:id="@+id/bt_login"
+        android:id="@+id/fb_login_button"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        facebook:confirm_logout="false"
+        facebook:fetch_user_info="true" />
+
+    <TextView
+        android:id="@+id/user_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="100dp"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentBottom="true"
+        android:layout_gravity="center"
+        android:layout_margin="10dp"
+        android:textSize="24sp"
+        android:textColor="#fafafa"
         />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/request_info"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/update_status"
+        android:textColor="#dadada"
+        />
+
+    <Button
+        android:id="@+id/to_personality_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/to_personality"
+        android:textColor="#dadada"
+        />
+
+</LinearLayout>
