--- a/mycareer/src/main/res/values/dimens.xml
+++ b/mycareer/src/main/res/values/dimens.xml
@@ -8,4 +8,8 @@
 
     <dimen name="grid_item_background_shadow_height">2dp</dimen>
     <dimen name="grid_item_background_corner_radius">2dp</dimen>
+
+    <dimen name="menu_margin">4dp</dimen>
+    <dimen name="menu_margin_all">8dp</dimen>
+    <dimen name="menu_margin_top">16dp</dimen>
 </resources>
