--- a/mycareer/src/main/res/layout/personality_page_viewer.xml
+++ b/mycareer/src/main/res/layout/personality_page_viewer.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -10,12 +11,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <android.support.v4.view.ViewPager
-            android:id="@+id/personality_pager"
+        <com.etsy.android.grid.StaggeredGridView
+            android:id="@+id/grid_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent"
+            app:item_margin="8dp"
+            app:column_count="@integer/grid_column_count" />
+        
     </FrameLayout>
 
-    <include layout="@layout/ll_drawer_layout"/>
+    <include layout="@layout/ll_drawer_layout" />
 
 </android.support.v4.widget.DrawerLayout>
