--- a/mycareer/src/main/res/values/colors.xml
+++ b/mycareer/src/main/res/values/colors.xml
@@ -10,4 +10,10 @@
     <color name="yellow">#fffffbae</color>
     <color name="red">#fff10800</color>
     <color name="list_item_pressed">#1A000000</color>
+
+    <color name="holo_black">#313131</color>
+    <color name="holo_dark_gray">#D0D0D0</color>
+    <color name="holo_gray">#F0F0F0</color>
+    <color name="holo_light_blue">#33B5E5</color>
+    <color name="holo_blue">#56B8D8</color>
 </resources>
