--- a/mycareer/src/main/res/values/dimens.xml
+++ b/mycareer/src/main/res/values/dimens.xml
@@ -14,4 +14,8 @@
     <dimen name="menu_margin_top">16dp</dimen>
     
     <dimen name="activity_margin">8dp</dimen>
+
+    <dimen name="shadow_width">8dp</dimen>
+    <dimen name="layer_width">300dp</dimen>
+    <dimen name="offset_width">48dp</dimen>
 </resources>
