--- a/mycareer/src/main/res/layout/personalitycomplete_layout.xml
+++ b/mycareer/src/main/res/layout/personalitycomplete_layout.xml
@@ -1,54 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/drawer_layout"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/holo_gray">
 
-    <FrameLayout
-        android:id="@+id/content_frame"
+    <TextView
+        android:id="@+id/tv_personality_header"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="80dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:text="@string/riasec_header"
+        android:textColor="@color/holo_black"
+        android:textSize="32dp"
+        android:gravity="center" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="@color/holo_gray">
+    <com.echo.holographlibrary.PieGraph
+        android:id="@+id/graph"
+        android:layout_below="@+id/tv_personality_header"
+        android:layout_width="match_parent"
+        android:layout_height="180dp" />
 
-            <TextView
-                android:id="@+id/tv_personality_header"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:text="@string/riasec_header"
-                android:textColor="@color/holo_black"
-                android:textSize="32dp"
-                android:gravity="center" />
+    <ListView
+        android:id="@+id/lv_personality"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="32dp"
+        android:layout_below="@+id/graph"
+        android:scrollbars="none"
+        android:background="@drawable/border_ui"
+        android:gravity="center" />
 
-            <com.echo.holographlibrary.PieGraph
-                android:id="@+id/graph"
-                android:layout_below="@+id/tv_personality_header"
-                android:layout_width="match_parent"
-                android:layout_height="180dp" />
-
-            <ListView
-                android:id="@+id/lv_personality"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="16dp"
-                android:layout_marginRight="16dp"
-                android:layout_marginTop="32dp"
-                android:layout_below="@+id/graph"
-                android:scrollbars="none"
-                android:background="@drawable/border_ui"
-                android:gravity="center" />
-
-        </RelativeLayout>
-
-    </FrameLayout>
-
-    <include layout="@layout/ll_drawer_layout" />
-
-</android.support.v4.widget.DrawerLayout>
+</RelativeLayout>
