--- a/mycareer/src/main/res/values/dimens.xml
+++ b/mycareer/src/main/res/values/dimens.xml
@@ -18,4 +18,17 @@
     <dimen name="shadow_width">8dp</dimen>
     <dimen name="layer_width">300dp</dimen>
     <dimen name="offset_width">48dp</dimen>
+
+
+    <!-- New google base dimens -->
+    <dimen name="title_align">24dp</dimen>
+    <dimen name="display4_font_size">112sp</dimen>
+    <dimen name="display3_font_size">56dp</dimen>
+    <dimen name="display2_font_size">45sp</dimen>
+    <dimen name="display1_font_size">34sp</dimen>
+    <dimen name="headline_font_size">24sp</dimen>
+    <dimen name="title_font_size">20sp</dimen>
+    <dimen name="caption_font_size">12sp</dimen>
+    <dimen name="menu_font_size">14sp</dimen>
+    <dimen name="button_font_size">14sp</dimen>
 </resources>
