--- a/mycareer/src/main/res/values/dimens.xml
+++ b/mycareer/src/main/res/values/dimens.xml
@@ -11,7 +11,7 @@
 
     <dimen name="menu_margin">4dp</dimen>
     <dimen name="menu_margin_all">8dp</dimen>
-    <dimen name="menu_margin_top">16dp</dimen>
+    <dimen name="margin_default">16dp</dimen>
     
     <dimen name="activity_margin">8dp</dimen>
 
