--- a/mycareer/src/main/res/layout/holland_grid_item.xml
+++ b/mycareer/src/main/res/layout/holland_grid_item.xml
@@ -1,61 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/holland_fl"
-    android:layout_gravity="center_horizontal"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_margin="@dimen/activity_margin">
+    android:layout_width="@dimen/personality_card_width"
+    android:layout_height="@dimen/personality_card_height"
+    android:layout_gravity="center"
+    android:layout_marginBottom="8dp"
+    android:background="@drawable/layer_card_background"
+    android:paddingBottom="2dp"
+    android:paddingLeft="1dp"
+    android:paddingRight="1dp"
+    android:paddingTop="1dp">
 
     <RelativeLayout
-        android:layout_width="200dp"
-        android:layout_height="250dp"
+        android:layout_width="@dimen/personality_card_width"
+        android:layout_height="@dimen/personality_card_height"
         android:focusable="false"
-        android:focusableInTouchMode="false"
-        android:padding="4dp">
+        android:focusableInTouchMode="false">
 
         <ImageView
             android:id="@+id/holland_iv"
-            android:layout_width="200dp"
-            android:layout_height="250dp"
-            android:scaleType="centerCrop"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:focusable="false"
             android:focusableInTouchMode="false"
+            android:scaleType="centerCrop"
             android:src="@drawable/holland1" />
 
         <CheckBox
             android:id="@+id/holland_cb"
-            android:focusableInTouchMode="false"
-            android:focusable="false"
-            android:clickable="false"
             android:layout_width="36dp"
             android:layout_height="36dp"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="4dp"
-            android:layout_marginRight="24dp"
-            android:layout_alignParentEnd="true" />
+            android:clickable="false"
+            android:focusable="false"
+            android:focusableInTouchMode="false" />
 
         <LinearLayout
-            android:layout_width="200dp"
+            android:layout_width="150dp"
             android:layout_height="48dp"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:background="#2f2f2f"
             android:focusable="false"
-            android:focusableInTouchMode="false"
-            android:background="#2f2f2f">
+            android:focusableInTouchMode="false">
 
             <TextView
                 android:id="@+id/holland_tv"
-                android:layout_width="160dp"
+                android:layout_width="150dp"
                 android:layout_height="match_parent"
-                android:layout_marginTop="4dp"
-                android:paddingRight="4dp"
-                android:layout_marginLeft="8dp"
                 android:layout_marginBottom="4dp"
-                android:textSize="14dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginTop="4dp"
+                android:clickable="false"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
-                android:clickable="false"
-                android:textColor="#AFAFAF" />
+                android:paddingRight="4dp"
+                android:textColor="#AFAFAF"
+                android:textSize="14dp" />
         </LinearLayout>
     </RelativeLayout>
 </FrameLayout>
