--- a/mycareer/src/main/res/layout/ll_drawer_layout.xml
+++ b/mycareer/src/main/res/layout/ll_drawer_layout.xml
@@ -9,7 +9,7 @@
     android:choiceMode="singleChoice"
     android:divider="@android:color/transparent"
     android:dividerHeight="0dp"
-    android:background="#111">
+    android:background="@color/holo_gray">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -24,15 +24,14 @@
             <RelativeLayout
                 android:id="@+id/top_profile_rl"
                 android:layout_width="match_parent"
-                android:layout_marginTop="@dimen/margin_default"
-                android:layout_height="50dp">
+                android:layout_height="125dp">
 
                 <com.facebook.widget.ProfilePictureView
                     android:id="@+id/profile_pic"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
                     android:layout_marginLeft="16dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_marginTop="36dp"
                     android:layout_marginBottom="4dp"
                     android:layout_alignParentLeft="true" />
 
@@ -64,7 +63,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/holo_black"
                     android:drawableLeft="@drawable/pin_white"
                     android:text="@string/menu_trending" />
 
@@ -86,7 +85,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/holo_black"
                     android:drawableLeft="@drawable/thumb_up_white"
                     android:text="@string/menu_recommendations" />
 
@@ -108,7 +107,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/holo_black"
                     android:text="@string/menu_history" />
 
                 <View
@@ -129,7 +128,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textColor="@android:color/darker_gray"
+                    android:textColor="@android:color/holo_blue_dark"
                     android:layout_marginLeft="@dimen/menu_margin_all"
                     android:textSize="12sp"
                     android:paddingTop="@dimen/margin_default"
@@ -152,7 +151,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/holo_black"
                     android:text="@string/menu_personality_review" />
 
                 <View
@@ -173,7 +172,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/holo_black"
                     android:text="@string/menu_personality_retake" />
 
                 <View
@@ -194,7 +193,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textColor="@android:color/darker_gray"
+                    android:textColor="@android:color/holo_blue_dark"
                     android:layout_marginLeft="@dimen/menu_margin_all"
                     android:textSize="12sp"
                     android:paddingTop="@dimen/margin_default"
@@ -217,7 +216,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/holo_black"
                     android:text="@string/menu_friends_popular" />
 
                 <View
@@ -241,7 +240,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/holo_black"
                     android:text="@string/menu_friends_spotlight" />
 
                 <View
@@ -265,7 +264,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical"
-                    android:textColor="@android:color/darker_gray"
+                    android:textColor="@android:color/holo_blue_dark"
                     android:layout_marginLeft="@dimen/menu_margin_all"
                     android:textSize="12sp"
                     android:paddingTop="@dimen/margin_default"
@@ -288,7 +287,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/holo_black"
                     android:text="@string/menu_settings_about" />
 
                 <View
@@ -312,7 +311,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center_vertical|center_horizontal"
-                    android:textColor="@android:color/white"
+                    android:textColor="@color/holo_black"
                     android:text="@string/menu_settings_logout" />
             </RelativeLayout>
         </LinearLayout>
