--- a/mycareer/src/main/res/layout/ll_drawer_layout.xml
+++ b/mycareer/src/main/res/layout/ll_drawer_layout.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:facebook="http://schemas.android.com/apk/res-auto"
     android:id="@+id/left_drawer"
     android:layout_width="240dp"
     android:layout_height="match_parent"
@@ -44,6 +45,7 @@
                             android:id="@+id/profile_pic"
                             android:layout_width="48dp"
                             android:layout_height="48dp"
+                            facebook:preset_size="small"
                             android:layout_alignParentLeft="true"
                             android:layout_marginBottom="4dp"
                             android:layout_marginLeft="16dp"
