--- a/mycareer/src/main/res/layout/trending_cardui_layout.xml
+++ b/mycareer/src/main/res/layout/trending_cardui_layout.xml
@@ -10,11 +10,23 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
         <com.fima.cardsui.views.CardUI
             android:id="@+id/cardsview"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="16dp"/>
+
+            <ProgressBar
+                android:id="@+id/pb_trending"
+                android:visibility="visible"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"/>
+
+        </FrameLayout>
 
     </RelativeLayout>
 
