--- a/mycareer/src/main/res/layout/profession_layout.xml
+++ b/mycareer/src/main/res/layout/profession_layout.xml
@@ -5,53 +5,93 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <FrameLayout
+        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-            <RelativeLayout
+            <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-                <TextView
-                    android:id="@+id/tv_title"
+                <RelativeLayout
                     android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+
+                    <TextView
+                        android:id="@+id/tv_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="48dp"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginTop="16dp"
+                        android:background="@color/holo_gray"
+                        android:gravity="center"
+                        android:textSize="18dp" />
+
+
+                    <TextView
+                        android:id="@+id/tv_description"
+                        android:layout_width="match_parent"
+                        android:layout_height="120dp"
+                        android:layout_below="@+id/tv_title"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginTop="16dp"
+                        android:background="@color/holo_gray"
+                        android:gravity="center" />
+
+                    <TextView
+                        android:id="@+id/tv_onthejob_task1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_description"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@color/holo_gray"
+                        android:drawableLeft="@drawable/rsz_ski_trail_rating_symbol_black_circle" />
+
+                    <TextView
+                        android:id="@+id/tv_onthejob_task2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_onthejob_task1"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@color/holo_gray"
+                        android:drawableLeft="@drawable/rsz_ski_trail_rating_symbol_black_circle" />
+
+                    <TextView
+                        android:id="@+id/tv_onthejob_task3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/tv_onthejob_task2"
+                        android:layout_marginLeft="8dp"
+                        android:layout_marginRight="8dp"
+                        android:layout_marginTop="8dp"
+                        android:background="@color/holo_gray"
+                        android:drawableLeft="@drawable/rsz_ski_trail_rating_symbol_black_circle" />
+
+                </RelativeLayout>
+
+                <ProgressBar
+                    android:id="@+id/pb_trending"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:text="Teste" />
+                    android:layout_gravity="center"
+                    android:visibility="visible" />
 
-                <TextView
-                    android:id="@+id/tv_description"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="16dp"
-                    android:layout_below="@+id/tv_title"
-                    android:text="Teste" />
+            </FrameLayout>
 
-                <TextView
-                    android:id="@+id/tv_onthejob"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/tv_description"
-                    android:text="Teste" />
-
-            </RelativeLayout>
-
-            <ProgressBar
-                android:id="@+id/pb_trending"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:visibility="visible" />
-
-        </FrameLayout>
-
-    </RelativeLayout>
+        </RelativeLayout>
+    </ScrollView>
 
     <include layout="@layout/ll_drawer_layout" />
 </android.support.v4.widget.DrawerLayout>
