--- a/mycareer/src/main/res/layout/card_image.xml
+++ b/mycareer/src/main/res/layout/card_image.xml
@@ -40,8 +40,7 @@
             android:layout_height="127dp"
             android:adjustViewBounds="true"
             android:baselineAlignBottom="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/small_computer_science" />
+            android:scaleType="centerCrop" />
 
         <TextView
             android:id="@+id/description"
