--- a/mycareer/src/main/res/layout/trending_cardui_layout.xml
+++ b/mycareer/src/main/res/layout/trending_cardui_layout.xml
@@ -10,6 +10,14 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/tv_search_description"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center_horizontal"
+            android:layout_margin="16dp"
+            android:text="@string/search_desc"/>
+
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
